testing/fail-lbnf/323-token-definition-conflicts-with-non-terminal.cf
-- Andreas Abel, 2020-11-15, issue #323
-- Token names may not overlap with rule lhss.

Foo. Main ::= Main "fun";
token Main {"main"};
